[tool.poetry]
name = "project1-zhmurov-nikolai-m25-555"
version = "0.1.0"
description = "A text-based adventure game where you explore an ancient labyrinth full of treasures and puzzles"
authors = ["Nikolai Zhmurov <nikolayzhmurov88@gmail.com"]
#readme = "README.md"
packages = [
    { include = "labyrinth_game" },
]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"
ruff = "^0.14.3"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
project = "labyrinth_game.main:main"

[tool.ruff]
line-length = 150
target-version = "py311"
exclude = ["venv", ".venv", "dist", "__pycache__"]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []